--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rle.STS">
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <permission android:name="com.ang.PROVIDER_PERMISSION" />
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+    <permission android:name="com.ang.PROVIDER_PERMISSION" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CheckListaApplication">
         <activity
-            android:name="com.rle.STS.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CheckListaApplication">
@@ -31,9 +32,8 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
-
     </application>
 
 </manifest>
