--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,23 +71,23 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
 
-    // Kotlin
+    //Kotlin
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    // Feature module Support
+    //Feature module Support
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
 
-    // Testing Navigation
+    //Testing Navigation
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
-    // Jetpack Compose Integration
+    //Jetpack Compose Integration
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
-    // Navigation Safe Args
+    //Navigation Safe Args
     //implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
-    // Constraint layout en compose
+    //Constraint layout en compose
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
 
     
@@ -103,9 +103,7 @@ dependencies {
     //LiveData Compose
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
-
     //Room
-
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt("androidx.room:room-compiler:$room_version")
@@ -120,20 +118,24 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.41'
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
 
-    // Dagger - Hilt
+    //Dagger - Hilt
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
-    // Retrofit
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
-    // OkHttp
+    //OkHttp
     implementation("com.squareup.okhttp3:okhttp:5.0.0-alpha.2")
 
-    // JSON Converter
+    //JSON Converter
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    //DataStore
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+    implementation 'androidx.datastore:datastore-rxjava2:1.0.0'
+    implementation 'androidx.datastore:datastore-rxjava3:1.0.0'
 
 }
