--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         nav_version = "2.4.2"
         hilt_version = '2.39'
         room_version = '2.4.2'
+        data_store = '1.0.0'
     }
 
     repositories {
