--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.checklistaapplication"
-        minSdk 29
+        minSdk 29 //Bajar
         targetSdk 32
         versionCode 1
         versionName "1.0"
